--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,16 @@
-nltk
-tflearn
+matplotlib
+prawcore
+aiohttp
+psutil
 numpy
-tensorflow-gpu
 flask
 requests
-PIL
 praw
 asyncpg
 discord
+pathlib
+googletrans
+Pillow
+PyYAML
+pynput
+colormath
