--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,18 @@
-matplotlib>=3.2.1
-prawcore>=1.3.0
-aiohttp>=3.6.2
-flask>=1.1.2
-requests>=2.23.0
-praw>=7.0.0
-asyncpg>=0.20.1
-discord>=1.0.1
-pathlib>=1.0.1
-googletrans>=2.4.0
-Pillow>=7.1.1
-PyYAML>=5.3.1
-pynput>=1.6.8
-colormath>=3.0.0
-aiofiles>=0.5.0
-numpy>=1.18.2
-imgurpython>=1.1.7
+matplotlib
+prawcore
+aiohttp
+flask
+requests
+praw
+asyncpg
+discord
+pathlib
+googletrans
+Pillow
+PyYAML
+pynput
+colormath
+aiofiles
+numpy
+imgurpython
+psutil
