--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,22 @@
-matplotlib
+matplotlib~=3.2.1
 prawcore
-aiohttp
+aiohttp~=3.6.2
 flask
-requests
-praw
-asyncpg
-discord
-pathlib
-googletrans
-Pillow
-PyYAML
-pynput
-colormath
-aiofiles
-numpy
+requests~=2.23.0
+praw~=7.0.0
+asyncpg~=0.20.1
+discord~=1.0.1
+pathlib~=1.0.1
+googletrans~=2.4.0
+Pillow~=7.1.2
+PyYAML~=5.3.1
+pynput~=1.6.8
+colormath~=3.0.0
+aiofiles~=0.5.0
+numpy~=1.18.3
 imgurpython
-psutil
-setuptools
-Cython
+psutil~=5.7.0
+setuptools~=46.1.3
+Cython~=0.29.17
+numexpr
+py-cpuinfo~=5.0.0
